Final work in index

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,9 +26,9 @@
 			<div class="logo"><object data="./assets/shared/logo.svg"></object></div>
 			<div class="hr"></div>
 			<div class="nav-slider">
-				<button class="nav-open mobile" onclick="this.parentElement.classList.add('opened'); document.querySelector('ul.navigation').style.display = 'flex';"><i class="hamburger"><object data="./assets/shared/icon-hamburger.svg"></object></i></button>
-				<ul class="navigation" ontransitionend="if (!this.parentElement.classList.contains('opened')){this.style.display = 'none';}">
-					<li class="section-close mobile"><button class="btn-close" onclick="document.querySelector('.nav-slider').classList.remove('opened')"><i class="icon-close"><object data="./assets/shared/icon-close.svg"></object></i></button></li>
+				<button class="nav-open mobile"><i class="hamburger"><object data="./assets/shared/icon-hamburger.svg"></object></i></button>
+				<ul class="navigation">
+					<li class="section-close mobile"><button class="btn-close"><i class="icon-close"><object data="./assets/shared/icon-close.svg"></object></i></button></li>
 					<li class="nav-text text-uppercase active"><a href="./index.html">Home</a></li>
 					<li class="nav-text text-uppercase"><a href="./destination-moon.html">Destination</a></li>
 					<li class="nav-text text-uppercase"><a href="./crew-commander.html">Crew</a></li>
