--- a/starter-code/destination-europa.html
+++ b/starter-code/destination-europa.html
@@ -1,38 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Space tourism website</title>
 </head>
+
 <body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
 
-  01 Pick your destination
+  <!DOCTYPE html>
+  <html lang="en">
 
-  Moon
-  Mars
-  Europa
-  Titan
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  Europa
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
-  The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of 
-  ice skating, curling, hockey, or simple relaxation in your snug 
-  wintery cabin.
+    <title>Frontend Mentor | Space tourism website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap"
+      rel="stylesheet">
 
-  Avg. distance
-  628 mil. km
 
-  Est. travel time
-  3 years
-</body>
-</html>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/destination.css">
+
+    <script src="./script/main.js" defer></script>
+  </head>
+
+  <body>
+    <navbar>
+      <nav>
+        <div class="logo"><object data="./assets/shared/logo.svg"></object></div>
+        <div class="nav-hr"></div>
+        <div class="nav-slider">
+          <button class="nav-open mobile"><i class="hamburger"><object
+                data="./assets/shared/icon-hamburger.svg"></object></i></button>
+          <ul class="navigation">
+            <li class="section-close mobile"><button class="btn-close"><i class="icon-close"><object
+                    data="./assets/shared/icon-close.svg"></object></i></button></li>
+            <li class="nav-text text-uppercase"><a href="./index.html">Home</a></li>
+            <li class="nav-text text-uppercase active"><a href="./destination-moon.html">Destination</a></li>
+            <li class="nav-text text-uppercase"><a href="./crew-commander.html">Crew</a></li>
+            <li class="nav-text text-uppercase"><a href="./technology-vehicle.html">Technology</a></li>
+          </ul>
+        </div>
+      </nav>
+    </navbar>
+    <main>
+      <article>
+        <section class="moon-img">
+          <sub class="heading-5 text-uppercase"><span class="darken bold">01</span> Pick your destination</sub>
+          <img src="./assets/destination/image-europa.png" alt="Europa" class="planet">
+        </section>
+        <section class="info">
+          <ul class="tabs">
+            <li class="nav-text text-uppercase"><a href="./destination-moon.html">Moon</a></li>
+            <li class="nav-text text-uppercase"><a href="./destination-mars.html">Mars</a></li>
+            <li class="nav-text text-uppercase active"><a href="./destination-europa.html">Europa</a></li>
+            <li class="nav-text text-uppercase"><a href="./destination-titan.html">Titan</a></li>
+          </ul>
+          <h1 class="heading-2 text-uppercase" style="margin-block-start: 2.25rem;">Europa</h1>
+          <p class="description" style="margin-block: .75rem 3.375rem;">
+            The smallest of the four Galilean moons orbiting Jupiter, Europa is a
+            winter lover’s dream. With an icy surface, it’s perfect for a bit of
+            ice skating, curling, hockey, or simple relaxation in your snug
+            wintery cabin.
+          </p>
+          <hr class="hr">
+          <div class="params">
+            <div class="param">
+              <h5 class="subheading-2 text-uppercase">Avg. distance</h5>
+              <p class="value subheading-1 text-uppercase">628 mil. km</p>
+            </div>
+            <div class="param">
+              <h5 class="subheading-2 text-uppercase">Est. travel time</h5>
+              <p class="value subheading-1 text-uppercase">3 years</p>
+            </div>
+          </div>
+        </section>
+
+      </article>
+    </main>
+  </body>
+
+  </html>
