--- a/starter-code/destination-titan.html
+++ b/starter-code/destination-titan.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Space tourism website</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+
+
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/destination.css">
+
+  <script src="./script/main.js" defer></script>
 </head>
+
 <body>
+  <navbar>
+    <nav>
+      <div class="logo"><object data="./assets/shared/logo.svg"></object></div>
+      <div class="nav-hr"></div>
+      <div class="nav-slider">
+        <button class="nav-open mobile"><i class="hamburger"><object
+              data="./assets/shared/icon-hamburger.svg"></object></i></button>
+        <ul class="navigation">
+          <li class="section-close mobile"><button class="btn-close"><i class="icon-close"><object
+                  data="./assets/shared/icon-close.svg"></object></i></button></li>
+          <li class="nav-text text-uppercase"><a href="./index.html">Home</a></li>
+          <li class="nav-text text-uppercase active"><a href="./destination-moon.html">Destination</a></li>
+          <li class="nav-text text-uppercase"><a href="./crew-commander.html">Crew</a></li>
+          <li class="nav-text text-uppercase"><a href="./technology-vehicle.html">Technology</a></li>
+        </ul>
+      </div>
+    </nav>
+  </navbar>
+  <main>
+    <article>
+      <section class="moon-img">
+        <sub class="heading-5 text-uppercase"><span class="darken bold">01</span> Pick your destination</sub>
+        <img src="./assets/destination/image-titan.png" alt="Titan" class="planet">
+      </section>
+      <section class="info">
+        <ul class="tabs">
+          <li class="nav-text text-uppercase"><a href="./destination-moon.html">Moon</a></li>
+          <li class="nav-text text-uppercase"><a href="./destination-mars.html">Mars</a></li>
+          <li class="nav-text text-uppercase"><a href="./destination-europa.html">Europa</a></li>
+          <li class="nav-text text-uppercase active"><a href="./destination-titan.html">Titan</a></li>
+        </ul>
+        <h1 class="heading-2 text-uppercase" style="margin-block-start: 2.25rem;">Titan</h1>
+        <p class="description" style="margin-block: .75rem 3.375rem;">
+          The only moon known to have a dense atmosphere other than Earth, Titan
+          is a home away from home (just a few hundred degrees colder!). As a
+          bonus, you get striking views of the Rings of Saturn.
+        </p>
+        <hr class="hr">
+        <div class="params">
+          <div class="param">
+            <h5 class="subheading-2 text-uppercase">Avg. distance</h5>
+            <p class="value subheading-1 text-uppercase">1.6 bil. km</p>
+          </div>
+          <div class="param">
+            <h5 class="subheading-2 text-uppercase">Est. travel time</h5>
+            <p class="value subheading-1 text-uppercase">7 years</p>
+          </div>
+        </div>
+      </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    </article>
+  </main>
 
-  01 Pick your destination
-
-  Moon
-  Mars
-  Europa
-  Titan
-
-  Titan
-
-  The only moon known to have a dense atmosphere other than Earth, Titan 
-  is a home away from home (just a few hundred degrees colder!). As a 
-  bonus, you get striking views of the Rings of Saturn.
-
-  Avg. distance
-  1.6 bil. km
-
-  Est. travel time
-  7 years
 </body>
+
 </html>
