--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/index.css">
 
-	<script src="./script/index.js" defer></script>
+	<script src="./script/main.js" defer></script>
 </head>
 
 <body>
@@ -39,12 +39,12 @@
 	</navbar>
 	<main>
 		<article>
-			<div class="intro">
+			<section class="intro">
 				<sub class="heading-5 text-uppercase">So, you want to travel to</sub>
 				<h1 class="title heading-1 text-uppercase">Space</h1>
 				<p class="description">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
-			</div>
-			<div class="button"><button class="explore heading-4 text-uppercase">Explore</button></div>
+			</section>
+			<section class="button"><button class="explore heading-4 text-uppercase">Explore</button></section>
 		</article>
 	</main>
 </body>
