--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -35,9 +35,9 @@
 		</nav>
 	</navbar>
 	<main>
+    <sub class="subtitle heading-5 text-uppercase"><span class="darken-2 bold">01</span> Pick your destination</sub>
     <article>
       <section class="moon-img">
-        <sub class="heading-5 text-uppercase"><span class="darken bold">01</span> Pick your destination</sub>
         <img src="./assets/destination/image-moon.png" alt="Moon" class="planet">
       </section>
       <section class="info">
