--- a/starter-code/destination-europa.html
+++ b/starter-code/destination-europa.html
@@ -55,9 +55,9 @@
       </nav>
     </navbar>
     <main>
+      <sub class="subtitle heading-5 text-uppercase"><span class="darken-2 bold">01</span> Pick your destination</sub>
       <article>
         <section class="moon-img">
-          <sub class="heading-5 text-uppercase"><span class="darken bold">01</span> Pick your destination</sub>
           <img src="./assets/destination/image-europa.png" alt="Europa" class="planet">
         </section>
         <section class="info">
