--- a/starter-code/destination-mars.html
+++ b/starter-code/destination-mars.html
@@ -57,7 +57,7 @@
     <main>
       <article>
         <section class="moon-img">
-          <sub class="heading-5 text-uppercase"><span class="darken bold">01</span> Pick your destination</sub>
+          <sub class="subtitle heading-5 text-uppercase"><span class="darken-2 bold">01</span> Pick your destination</sub>
           <img src="./assets/destination/image-mars.png" alt="Mars" class="planet">
         </section>
         <section class="info">
